--- a/servlet_jsp_complaint_tracker/src/main/webapp/WEB-INF/web.xml
+++ b/servlet_jsp_complaint_tracker/src/main/webapp/WEB-INF/web.xml
@@ -69,4 +69,13 @@
     <servlet-name>AdminComplaintServlet</servlet-name>
     <url-pattern>/AdminComplaintServlet</url-pattern>
   </servlet-mapping>
+  <filter>
+    <display-name>AuthFilter</display-name>
+    <filter-name>AuthFilter</filter-name>
+    <filter-class>com.demo.complaint.filter.AuthFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>AuthFilter</filter-name>
+    <url-pattern>/AuthFilter</url-pattern>
+  </filter-mapping>
 </web-app>
